--- a/app/src/main/res/layout/activity_profile_overview.xml
+++ b/app/src/main/res/layout/activity_profile_overview.xml
@@ -52,6 +52,8 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/button_profile_action"
+        android:drawableTop="@drawable/ic_maintenance"
+        android:padding="8dp"
         android:text="@string/activity_profile_overview_maintenance"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +67,8 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/button_profile_action"
+        android:drawableTop="@drawable/ic_post_ride"
+        android:padding="8dp"
         android:text="@string/activity_profile_overview_post_ride"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +82,8 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/button_profile_action"
+        android:drawableTop="@drawable/ic_checklist"
+        android:padding="8dp"
         android:text="@string/activity_profile_overview_pre_ride"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,10 +97,27 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/button_profile_action"
+        android:drawableTop="@drawable/ic_notes"
+        android:padding="8dp"
         android:text="@string/activity_profile_overview_notes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_overview_pre_ride_btn" />
+
+    <Button
+        android:id="@+id/profile_overview_edit_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/button_profile_action"
+        android:drawableTop="@drawable/ic_pencil"
+        android:padding="8dp"
+        android:text="@string/activity_profile_overview_edit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_overview_notes_btn" />
 
     <fragment
         android:id="@+id/profile_overview_info_panel_f"
