--- a/app/src/main/res/layout/fragment_profile_header.xml
+++ b/app/src/main/res/layout/fragment_profile_header.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/profile_header_background"
-    android:backgroundTint="@color/db2">
+    android:backgroundTint="@color/content_background">
 
     <ImageView
         android:id="@+id/profile_header_img_iv"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="65dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
