--- a/app/src/main/res/drawable/accent_color_border.xml
+++ b/app/src/main/res/drawable/accent_color_border.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/accent" />
+        android:color="?colorAccent" />
     <solid android:color="@android:color/transparent"/>
     <corners android:radius="5dp" />
 
