--- a/app/src/main/res/drawable/button_profile_action_pressed.xml
+++ b/app/src/main/res/drawable/button_profile_action_pressed.xml
@@ -5,7 +5,7 @@
     <stroke
         android:width="1dp"
         android:color="@color/accent_pressed" />
-    <solid android:color="@color/db2"/>
+    <solid android:color="@color/content_background"/>
     <corners android:radius="5dp" />
 
 </shape>
