--- a/app/src/main/res/drawable/profile_header_background.xml
+++ b/app/src/main/res/drawable/profile_header_background.xml
@@ -5,6 +5,6 @@
     <stroke
         android:width="1dp"
         android:color="@color/textColor" />
-    <solid android:color="@color/db2"/>
+    <solid android:color="@color/content_background"/>
 
 </shape>
