--- a/app/src/main/res/layout/fragment_collapsible_info_panel.xml
+++ b/app/src/main/res/layout/fragment_collapsible_info_panel.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:elevation="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:backgroundTint="@color/db2"
+    android:backgroundTint="@color/content_background"
     tools:context=".ui.fragments.CollapsibleInfoPanel">
 
     <View
@@ -21,7 +21,7 @@
         android:id="@+id/task_overview_info_btn_cl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/dark_background"
+        android:background="@color/screen_background"
         app:layout_constraintBottom_toTopOf="@+id/collapsing_info_cl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -61,7 +61,7 @@
             android:id="@+id/information_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/db2"
+            android:background="@color/content_background"
             android:padding="16dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/opaqueTextColor"
