--- a/app/src/main/res/menu/tasks_overview_menu.xml
+++ b/app/src/main/res/menu/tasks_overview_menu.xml
@@ -6,6 +6,6 @@
         android:id="@+id/toolbar_tasks_overview_icon_add"
         android:icon="@drawable/ic_add_circle"
         android:title="@string/toolbar_tasks_overview_icon_add"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
 </menu>
