Switched activity help/info panel for fragment to custom layout
* Refactored to implement activity help/info panel as a custom layout instead of using a fragment.
* Info panel now opens from the toolbar overflow menu instead of taking up screen space.

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -31,14 +31,39 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/edit_profile_window"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/accent_color_border"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_profile_toolbar_bottom_border">
+
+        <Button
+            android:id="@+id/edit_profile_confirm_btn"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/button_confrim"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/edit_profile_cancel_btn"
+            app:layout_constraintTop_toBottomOf="@+id/edit_profile_hours_value_et" />
+
+        <Button
+            android:id="@+id/edit_profile_cancel_btn"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/button_cancel"
+            app:layout_constraintBaseline_toBaselineOf="@+id/edit_profile_confirm_btn"
+            app:layout_constraintEnd_toStartOf="@+id/edit_profile_confirm_btn"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/edit_profile_year_value_et"
@@ -82,11 +107,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="64dp"
             android:ems="10"
             android:gravity="center"
             android:inputType="numberDecimal"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/edit_profile_model_value_et" />
 
@@ -170,13 +193,13 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <fragment
-        android:id="@+id/edit_profile_info_panel_f"
-        android:name="com.slack.motometer.ui.fragments.CollapsibleInfoPanel"
+    <include
+        layout="@layout/info_panel"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
