--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -58,19 +58,19 @@
         android:gravity="start|top"
         android:inputType="textMultiLine|textNoSuggestions"
         android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/notes_info_panel_f"
+        app:layout_constraintBottom_toTopOf="@+id/notes_nav_bar_top_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notes_header_f" />
 
-    <fragment
-        android:id="@+id/notes_info_panel_f"
-        android:name="com.slack.motometer.ui.fragments.CollapsibleInfoPanel"
+    <include
+        layout="@layout/info_panel"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/notes_nav_bar_top_border"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notes_toolbar" />
 
     <View
         android:id="@+id/notes_nav_bar_top_border"
