--- a/app/src/main/res/layout/activity_post_ride.xml
+++ b/app/src/main/res/layout/activity_post_ride.xml
@@ -70,8 +70,8 @@
             android:id="@+id/post_ride_cancel_btn"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginBottom="64dp"
             android:background="@drawable/button_cancel"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/post_ride_confirm_btn"
@@ -120,14 +120,14 @@
             app:layout_constraintStart_toEndOf="@+id/post_ride_hours_value_et" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <fragment
-        android:id="@+id/post_ride_info_panel_f"
-        android:name="com.slack.motometer.ui.fragments.CollapsibleInfoPanel"
+    <include
+        layout="@layout/info_panel"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/post_ride_nav_bar_top_border"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/post_ride_toolbar" />
 
     <View
         android:id="@+id/post_ride_nav_bar_top_border"
