--- a/app/src/main/res/layout/fragment_profile_card.xml
+++ b/app/src/main/res/layout/fragment_profile_card.xml
@@ -14,7 +14,7 @@
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
@@ -44,13 +44,28 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/profile_card_hrs_value_tv"
+            android:id="@+id/profile_card_edit_tv"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/ic_pencil"
+            android:backgroundTint="@color/accent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/profile_card_hourmeter_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:layout_marginTop="24dp"
+            android:text="@string/profile_card_hourmeter"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/opaqueTextColor"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_card_hourmeter_tv" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_card_image_iv" />
 
         <TextView
             android:id="@+id/profile_card_hrs_tv"
@@ -62,6 +77,15 @@
             app:layout_constraintStart_toEndOf="@+id/profile_card_hrs_value_tv" />
 
         <TextView
+            android:id="@+id/profile_card_hrs_value_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile_card_hourmeter_tv" />
+
+        <TextView
             android:id="@+id/profile_card_wrench_tv"
             android:layout_width="20dp"
             android:layout_height="20dp"
@@ -69,6 +93,15 @@
             android:background="@android:drawable/ic_menu_manage"
             app:layout_constraintBaseline_toBaselineOf="@+id/profile_card_hrs_tv"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/profile_card_upcoming_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:textColor="@color/opaqueTextColor"
+            app:layout_constraintBottom_toTopOf="@+id/profile_card_task_tv"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/profile_card_task_tv"
@@ -81,12 +114,20 @@
             app:layout_constraintTop_toBottomOf="@+id/profile_card_hrs_value_tv" />
 
         <TextView
+            android:id="@+id/profile_card_task_hrs_value_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/profile_card_task_tv"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
             android:id="@+id/profile_card_insp_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
-            android:text="Pre-ride Inspection Status"
+            android:text="@string/profile_card_inspection_status"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profile_card_task_tv" />
@@ -101,34 +142,48 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:id="@+id/profile_card_hourmeter_tv"
+            android:id="@+id/profile_card_tasks_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:text="Hourmeter:"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/opaqueTextColor"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_card_image_iv" />
-
-        <TextView
-            android:id="@+id/profile_card_upcoming_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:textColor="@color/opaqueTextColor"
-            app:layout_constraintBottom_toTopOf="@+id/profile_card_task_tv"
+            android:background="@drawable/ic_maintenance"
+            android:backgroundTint="@color/accent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/profile_card_post_ride_btn"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/profile_card_task_hrs_value_tv"
+            android:id="@+id/profile_card_pre_ride_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text="TextView"
-            app:layout_constraintBaseline_toBaselineOf="@+id/profile_card_task_tv"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:background="@drawable/ic_checklist"
+            android:backgroundTint="@color/accent"
+            app:layout_constraintBaseline_toBaselineOf="@+id/profile_card_post_ride_btn"
+            app:layout_constraintEnd_toStartOf="@+id/profile_card_notes_btn"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/profile_card_post_ride_btn" />
+
+        <TextView
+            android:id="@+id/profile_card_post_ride_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_post_ride"
+            android:backgroundTint="@color/accent"
+            app:layout_constraintBaseline_toBaselineOf="@+id/profile_card_tasks_btn"
+            app:layout_constraintEnd_toStartOf="@+id/profile_card_pre_ride_btn"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/profile_card_tasks_btn" />
+
+        <TextView
+            android:id="@+id/profile_card_notes_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_notes"
+            android:backgroundTint="@color/accent"
+            app:layout_constraintBaseline_toBaselineOf="@+id/profile_card_pre_ride_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/profile_card_pre_ride_btn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
