--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,10 +2,16 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:android="http://schemas.android.com/apk/res/android">
 
-<item
-    android:id="@+id/toolbar_main_add_profile"
-    android:icon="@drawable/ic_add_circle"
-    android:title="@string/toolbar_pre_ride_icon_add"
-    app:showAsAction="always" />
+    <item
+        android:id="@+id/toolbar_main_add_profile"
+        android:icon="@drawable/ic_add_circle"
+        android:title="@string/toolbar_pre_ride_icon_add"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/toolbar_main_help"
+        android:icon="@drawable/ic_info"
+        android:title="@string/toolbar_info"
+        app:showAsAction="never" />
 
 </menu>
