--- a/app/src/main/res/menu/notes_menu.xml
+++ b/app/src/main/res/menu/notes_menu.xml
@@ -9,6 +9,12 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/toolbar_notes_help"
+        android:icon="@drawable/ic_info"
+        android:title="@string/toolbar_info"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/toolbar_notes_icon_clear"
         android:title="@string/toolbar_notes_icon_clear"
         app:showAsAction="never" />
