--- a/app/src/main/res/menu/task_sign_off_menu.xml
+++ b/app/src/main/res/menu/task_sign_off_menu.xml
@@ -3,6 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/toolbar_task_sign_off_help"
+        android:icon="@drawable/ic_info"
+        android:title="@string/toolbar_info"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/toolbar_task_sign_off_icon_edit"
         android:title="@string/toolbar_task_sign_off_icon_edit"
         app:showAsAction="never" />
