--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -56,7 +56,10 @@
         android:background="@drawable/accent_color_border"
         android:ems="10"
         android:gravity="start|top"
+        android:importantForAccessibility="no"
+        android:importantForAutofill="no"
         android:inputType="textMultiLine|textNoSuggestions"
+        android:scrollbars="vertical"
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/notes_nav_bar_top_border"
         app:layout_constraintEnd_toEndOf="parent"
