--- a/app/src/main/res/layout/fragment_profile_card.xml
+++ b/app/src/main/res/layout/fragment_profile_card.xml
@@ -47,8 +47,6 @@
             android:id="@+id/profile_card_edit_tv"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginTop="19dp"
-            android:layout_marginEnd="16dp"
             android:background="@drawable/ic_pencil"
             android:backgroundTint="@color/accent"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -145,6 +143,7 @@
             android:id="@+id/profile_card_tasks_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/ic_maintenance"
             android:backgroundTint="@color/accent"
             app:layout_constraintBottom_toBottomOf="parent"
