--- a/app/src/main/res/layout/info_panel.xml
+++ b/app/src/main/res/layout/info_panel.xml
@@ -15,8 +15,9 @@
         android:layout_height="0dp"
         android:background="@color/content_background"
         android:padding="16dp"
+        android:scrollbars="vertical"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/opaqueTextColor"
+        android:textColor="@color/textColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,11 +51,9 @@
 
         <TextView
             android:id="@+id/info_collapse_tv"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginTop="4dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginEnd="4dp"
-            android:layout_marginBottom="4dp"
             android:background="@drawable/ic_arrow_down"
             android:backgroundTint="@color/accent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -67,8 +66,20 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:text="@string/help"
-            app:layout_constraintBaseline_toBaselineOf="@+id/info_collapse_tv"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="close"
+            android:textColor="@color/textColor"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/info_collapse_tv"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
