--- a/app/src/main/res/layout/info_panel.xml
+++ b/app/src/main/res/layout/info_panel.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/screen_background"
-    android:elevation="10dp"
     android:visibility="gone">
 
     <TextView
@@ -74,7 +73,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="close"
+            android:text="@string/close"
             android:textColor="@color/textColor"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
